--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "spa",
+  "name": "test",
   "version": "1.0.0",
-  "description": "This repo contains a small bit of starer code for teaching people about **S**ingle **P**age **A**pplications - SPAs",
+  "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mklilley/spa.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "vite",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mklilley/spa/issues"
-  },
-  "homepage": "https://github.com/mklilley/spa#readme"
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^3.0.9"
+  }
 }
